[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shapecms"
version = "0.0.5"
authors = [
  { name="Asko Nõmm", email="asko@repl.ee" },
]
description = "A composable content management system"
dependencies = [
    "flask",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/askonomm/shapecms"
"Bug Tracker" = "https://github.com/askonomm/shapecms/issues"